--- a/index.html
+++ b/index.html
@@ -3,72 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family:Arial, Helvetica, sans-serif;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: #fff;
-        }
-        a {
-            position: relative;
-            display: inline-block;
-            padding: 15px 30px;
-            border: 2px solid #111;
-            text-transform: uppercase;
-            color: #111;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 20px;
-        }
-        a:before{
-            content: '';
-            position: absolute;
-            top: 6px;
-            left: -2px;
-            width: calc(100% + 4px);
-            height: calc(100% - 12px);
-            background: #fff;
-            transition: 0.5s ease-in-out;
-            transform: scaleY(1);
-        }
-        a:hover:before{
-            transform: scaleY(0);
-        }
-        
-        a:after
-        {
-            content: '';
-            position: absolute;
-            left: 6px;
-            top: -2px;
-            height: calc(100% + 4px);
-            width: calc(100% - 12px);
-            background: #fff;
-            transition: 0.5s ease-in-out;
-            transform: scaleX(1);
-        }
-        a:hover:after{
-            transform: scaleX(0);
-        }
-        a span{
-            position: relative;
-            z-index: 3;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <title>VihiWeb15</title>
 </head>
 <body>
-    <a href="Game.html"><span>Click ME!</span></a>
-
+    <canvas style="position: fixed; top: 0; left: 0;"></canvas>
+    <script type="text/javascript" src="./script.js"></script>
+    <ul>
+        <li style="--i:6;"><a href="#">Home</a></li>
+        <li style="--i:5;"><a href="#">About</a></li>
+        <li style="--i:4;"><a href="#">PixelArtGame</a></li>
+        <li style="--i:3;"><a href="#">Calculator</a></li>
+        <li style="--i:2;"><a href="#">Games</a></li>
+        <li style="--i:1;"><a href="#">Contact</a></li>
+    </ul>
     
 </body>
 </html>
