--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <canvas style="position: fixed; top: 0; left: 0;"></canvas>
     <script type="text/javascript" src="./script.js"></script>
     <ul>
-        <li style="--i:6;"><a href="#">Home</a></li>
-        <li style="--i:5;"><a href="#">About</a></li>
-        <li style="--i:4;"><a href="#">PixelArtGame</a></li>
-        <li style="--i:3;"><a href="#">Calculator</a></li>
-        <li style="--i:2;"><a href="#">Games</a></li>
-        <li style="--i:1;"><a href="#">Contact</a></li>
+        <li style="--i:6;"><a href="Blender.html">Blender</a></li>
+        <li style="--i:5;"><a href="#">nothing</a></li>
+        <li style="--i:4;"><a href="#">nothing</a></li>
+        <li style="--i:3;"><a href="#">nothing</a></li>
+        <li style="--i:2;"><a href="#">nothing</a></li>
+        <li style="--i:1;"><a href="#">nothing</a></li>
     </ul>
     
 </body>
