--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>firstpage</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+    <a href="index2.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Enter
+
+
+
+    </a>
     
 </body>
 </html>
