--- a/Blender.html
+++ b/Blender.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Millennium Falcon</title>
+		<title>911</title>
 
 		<link rel="stylesheet" href="public/index.css">
 
@@ -18,7 +18,7 @@
 	</head>
 	<body>
     <div id="heading">
-      <h1>911</h1>
+      <h1>use mouse to look around</h1>
       <div class="border"></div>
     </div>
     <div id="progress-container">
