--- a/index2.html
+++ b/index2.html
@@ -14,8 +14,8 @@
 
        <ul class="Valikko">
         <li style="--i:6;"><a href="Blender.html">Blender</a></li>
-        <li style="--i:5;"><a href="Game.html">Games</a></li>
-        <li style="--i:4;"><a href="#">Contact</a></li>
+        <li style="--i:5;"><a href="Game.html">Game</a></li>
+        <li style="--i:4;"><a href="contact.html">Contact</a></li>
         </ul>
 
     
