--- a/Blender.html
+++ b/Blender.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
     <div id="heading">
-      <h1>use mouse to look around</h1>
+      <h1>hold mouse button 1 to move camera</h1>
       <div class="border"></div>
     </div>
     <div id="progress-container">
